--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="fontawesome-free-7.0.0-web/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="bootstrap-5.3.7-dist/css/bootstrap.css">
+  <link rel="stylesheet" href="css/styleSheet.css">
 </head>
 <body>
-  
+<nav class="navbar navbar-expand-lg navbar-light py-3">
+  <div class="container d-flex justify-content-between align-items-center">
+
+    <!-- Left: Logo -->
+     
+    <a class="navbar-brand main-link h1" href="index.html"><img src="images/logo-dark.svg"></a>
+
+    <!-- Center: Nav links -->
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav ">
+        <li class="nav-item px-3">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item px-3">
+          <a class="nav-link" href="services.html">Services</a>
+        </li>
+        <li class="nav-item px-3">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item px-3">
+          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Right: Request Invite button (hidden on small screens) -->
+    <div class="d-none d-lg-block">
+      <a href="#" class="btn request-button">Request Invite</a>
+    </div>
+
+    <!-- Navbar toggler (mobile) -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+  </div>
+</nav>
+
+
+  <script src="bootstrap-5.3.7-dist/js/popper.min.js"></script>
+  <script src="bootstrap-5.3.7-dist/js/jquery-3.7.1.min.js"></script>
+  <script src="bootstrap-5.3.7-dist/js/bootstrap.js"></script>
 </body>
+
 </html>
