implement  Home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="fontawesome-free-7.0.0-web/css/all.min.css">
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -50,7 +51,36 @@
     </button>
 
   </div>
-</nav>
+  </nav>
+  <main>
+   <section class="section1">
+  <div class="row flex-column-reverse flex-lg-row overflow-hidden">
+
+    <!-- العمود الأول: النص -->
+    <div class="col-12 col-lg-6 col1">
+      <h1>Next generation digital banking</h1>
+      <p>
+        Take your financial life online. Your Digitalbank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.
+      </p>
+
+      <div class="col1-button">
+        <a href="#" class="btn request-button">Request Invite</a>
+      </div>
+    </div>
+
+ 
+    <div class=" col-12 col-lg-6 col2">
+      
+       <img class="  col2-img1" src="images/bg-intro-desktop.svg"  alt=""> 
+      <img class="col2-img2" src="images/image-mockups.png" alt="phone-image">
+    </div>
+
+  </div>
+</section>
+
+
+ 
+  </main>
 
 
   <script src="bootstrap-5.3.7-dist/js/popper.min.js"></script>
