--- a/index.html
+++ b/index.html
@@ -6,80 +6,132 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="fontawesome-free-7.0.0-web/css/all.min.css">
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="bootstrap-5.3.7-dist/css/bootstrap.css">
   <link rel="stylesheet" href="css/styleSheet.css">
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-light py-3">
-  <div class="container d-flex justify-content-between align-items-center">
+  <nav class="navbar navbar-expand-lg navbar-light py-3">
+    <div class="container d-flex justify-content-between align-items-center">
 
-    <!-- Left: Logo -->
-     
-    <a class="navbar-brand main-link h1" href="index.html"><img src="images/logo-dark.svg"></a>
+      <!-- Left: Logo -->
 
-    <!-- Center: Nav links -->
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav ">
-        <li class="nav-item px-3">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link" href="services.html">Services</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link" href="about.html">About</a>
-        </li>
-        <li class="nav-item px-3">
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
-        </li>
-      </ul>
-    </div>
+      <a class="navbar-brand main-link h1" href="index.html"><img src="images/logo-dark.svg"></a>
 
-    <!-- Right: Request Invite button (hidden on small screens) -->
-    <div class="d-none d-lg-block">
-      <a href="#" class="btn request-button">Request Invite</a>
-    </div>
+      <!-- Center: Nav links -->
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav ">
+          <li class="nav-item px-2">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item px-2">
+            <a class="nav-link" href="#">Careers</a>
+          </li>
+        </ul>
+      </div>
 
-    <!-- Navbar toggler (mobile) -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-  </div>
-  </nav>
-  <main>
-   <section class="section1">
-  <div class="row flex-column-reverse flex-lg-row overflow-hidden">
-
-    <!-- العمود الأول: النص -->
-    <div class="col-12 col-lg-6 col1">
-      <h1>Next generation digital banking</h1>
-      <p>
-        Take your financial life online. Your Digitalbank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.
-      </p>
-
-      <div class="col1-button">
+      <!-- Right: Request Invite button (hidden on small screens) -->
+      <div class="d-none d-lg-block">
         <a href="#" class="btn request-button">Request Invite</a>
       </div>
-    </div>
 
- 
-    <div class=" col-12 col-lg-6 col2">
+      <!-- Navbar toggler (mobile) -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+    </div>
+  </nav>
+  <main>
+    <section class="section1">
+      <div class="row flex-column-reverse flex-lg-row overflow-hidden">
+
       
-       <img class="  col2-img1" src="images/bg-intro-desktop.svg"  alt=""> 
-      <img class="col2-img2" src="images/image-mockups.png" alt="phone-image">
-    </div>
+        <div class="col-12 col-lg-6 col1">
+          <h1>Next generation digital banking</h1>
+          <p>
+            Take your financial life online. Your Digitalbank account will be a one-stop-shop for spending, saving,
+            budgeting, investing, and much more.
+          </p>
 
-  </div>
-</section>
+          <div class="col1-button">
+            <a href="#" class="btn request-button">Request Invite</a>
+          </div>
+        </div>
 
 
- 
+        <div class=" col-12 col-lg-6 col2">
+
+          <img class="col2-img1" src="images/bg-intro-desktop.svg" alt="">
+          <img class="col2-img2" src="images/image-mockups.png" alt="">
+        </div>
+
+      </div>
+    </section>
+    <section class="section2">
+
+
+      <div class="container">
+        <di class="div1">
+          <h2>Why choose Digitalbank?</h2>
+          <p>We leverage Open Banking to turn your bank accout into your financial hub. Control your financial like
+            never before.</p>
+        </di>
+
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-3 sec2-col">
+            <img src="images/icon-online.svg">
+            <h4>Online Banking</h4>
+            <p>Our modern web and mobile application allow you to keep track of your finances wherever you are in the
+              world.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3  sec2-col">
+            <img src="images/icon-budgeting.svg">
+            <h4>Simple Budgeting </h4>
+            <p>See exactly where your money goes each month.Receive notifications when you're close to hitting your
+              limits.
+            </p>
+          </div>
+          <div class="col-12 col-md-6 col-lg-3  sec2-col">
+            <img src="images/icon-onboarding.svg">
+            <h4>Fast Onboarding</h4>
+            <p>We don't do branches.Open your account in minutes online and start taking control of your finances right
+              away.
+            </p>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 sec2-col">
+            <img src="images/icon-api.svg">
+            <h4>Open API</h4>
+            <p>Manage your saving,investments,pension,and much more from one account. Tracking your money has never been easier.
+            </p>
+          </div>
+        </div>
+
+      </div>
+
+
+    </section>
+
+
+
   </main>
 
 
