--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="section1">
       <div class="row flex-column-reverse flex-lg-row overflow-hidden">
 
-      
+
         <div class="col-12 col-lg-6 col1">
           <h1>Next generation digital banking</h1>
           <p>
@@ -87,11 +87,11 @@
 
 
       <div class="container">
-        <di class="div1">
+        <div class="div1">
           <h2>Why choose Digitalbank?</h2>
           <p>We leverage Open Banking to turn your bank accout into your financial hub. Control your financial like
             never before.</p>
-        </di>
+        </div>
 
         <div class="row">
           <div class="col-12 col-md-6 col-lg-3 sec2-col">
@@ -120,16 +120,94 @@
           <div class="col-12 col-md-6 col-lg-3 sec2-col">
             <img src="images/icon-api.svg">
             <h4>Open API</h4>
-            <p>Manage your saving,investments,pension,and much more from one account. Tracking your money has never been easier.
+            <p>Manage your saving,investments,pension,and much more from one account. Tracking your money has never been
+              easier.
             </p>
           </div>
         </div>
 
       </div>
 
+    </section>
+    <section class="section3">
+
+
+
+      <div class="container">
+        <div class="div1">
+          <h2>Latest Articles</h2>
+        </div>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-3 sec2-col">
+
+            <div class="card" style="width: 18rem;">
+              <img src="images/image-currency.jpg" class="card-img-top "style="height: 190px"   alt="...">
+              <div class="card-body">
+                
+                <p class="auther">By Claire Robinson</p>
+                <h5 class="card-title">Receive money in any currency with no fees</h5>
+                <p class="card-text">
+                  The world is getting smaller and we’re becoming more mobile. So why should you be forced to only
+                  receive money
+                  in a single ...</p>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 sec2-col">
+
+            <div class="card" style="width: 18rem;">
+              <img src="images/image-restaurant.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p  class="auther">By Wilson Hutton</p>
+                <h5 class="card-title">Treat yourself without worrying about money
+                </h5>
+                <p class="card-text">
+                  Our simple budgeting feature allows you to separate out your spending and set realistic limits each
+                  month. That means you ...</p>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 sec2-col">
+
+            <div class="card" style="width: 18rem;">
+              <img src="images/image-plane.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p   class="auther">By Wilson Hutton</p>
+                <h5 class="card-title">Take your Digitalbank card wherever you go
+                </h5>
+                <p class="card-text">
+                  We want you to enjoy your travels. This is why we don’t charge any fees for purchases while you’re
+                  abroad. We’ll even ...</p>
+
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 sec2-col">
+
+            <div class="card" style="width: 18rem;">
+              <img src="images/image-confetti.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p   class="auther">By Claire Robinson</p>
+                <h5 class="card-title">Our invite-only Beta accounts are now live!</h5>
+                <p class="card-text">
+                  After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to
+                  request an invite through ...</p>
+
+              </div>
+            </div>
+          </div>
+
+
+        </div>
+
+      </div>
 
     </section>
-
 
 
   </main>
